tests/fixtures/compile-errors/register-invalid-number-params/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.RegisterInvalidNumberParams